Added:searchBook api
